risf/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risf-deployment
  namespace: itsf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: risf-app
  template:
    metadata:
      labels:
        app: risf-app
    spec:
      serviceAccountName: restricted-service-account
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
      - name: risf-container
        image: risf:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
        volumeMounts:
        - mountPath: /var/cache/nginx
          name: nginx-cache
        - mountPath: /var/run
          name: nginx-run
      volumes:
      - name: nginx-cache
        emptyDir: {}
      - name: nginx-run
        emptyDir: {}
      - name: risf-content
